# spotify-trends-dashboard

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: snapshot.yml
backend/app/: config.py  main.py
backend/app/db/: session.py
backend/app/models/: snapshot.py  token.py
backend/app/routers/: auth.py  tracks.py  trends.py
backend/app/services/: snapshot_service.py  token_service.py
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/trends/: page.tsx
jobs/: snapshot_job.py
